--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!-- React app entry point -->
+<!DOCTYPE html><html><head><title>EthoSUS</title></head><body><div id="root"></div><script type="module" src="main.jsx"></script></body></html>
